correcting gap

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   /** HOST PAGE global css  */
   .host-content-box {
-    @apply relative flex flex-col gap-5;
+    @apply relative flex flex-col gap-10 ;
   }
   .grid-box {
     @apply grid grid-cols-1 sm:grid-cols-2;
